# CLISQLite

./: CLI.cpp  CLI.h  CMakeLists.txt  Controller.cpp  Controller.h  SQL.cpp  SQL.h  TableInfo.h  main.cpp
